hphp/hack/test/typecheck/inout/bad_inout_use_ellipsis2.php.exp
File "bad_inout_use_ellipsis2.php", line 6, characters 14-21:
Unexpected inout annotation for argument (Typing[4183])
File "bad_inout_use_ellipsis2.php", line 4, characters 28-29:
A variadic parameter can never be inout
