hphp/hack/test/typecheck/inout/bad_inout_use_ellipsis2.php
<?hh // partial

function test(): void {
  $f = function(int $x, ...$_) {};
  $v = 123;
  $f(42, $v, inout $v);
}
